--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Homework 6</title>
-  <link rel="stylesheet" href=".css/common.css" />
+  <link rel="stylesheet" href="./css/common.css" />
 </head>
 
 <body>
   <ul>
-    <li><a href="task-01.html">Task 1</a></li>
+    <li><a href="./task-01.html">Task 1</a></li>
 
     <!-- <li><a href="task-02.html">Task 2</a></li>
       <li><a href="task-03.html">Task 3</a></li>
@@ -24,7 +24,6 @@
       <li><a href="task-10.html">Task 10 (optional)</a></li> -->
   </ul>
 
-  <script src="./js/task-01.js"></script>
 </body>
 
 </html>
